syntax = "proto3";

package stwartchain.rates;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "stwartchain/rates/params.proto";
import "stwartchain/rates/addresses.proto";
import "stwartchain/rates/rates.proto";

option go_package = "gitlab.stalwart.tech/ijio/main/backend/stwart-chain/x/rates/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/stwart/rates/params";
  
  }
  
  // Queries a list of Addresses items.
  rpc Addresses    (QueryGetAddressesRequest) returns (QueryGetAddressesResponse) {
    option (google.api.http).get = "/stwart/rates/addresses/{id}";
  
  }
  rpc AddressesAll (QueryAllAddressesRequest) returns (QueryAllAddressesResponse) {
    option (google.api.http).get = "/stwart/rates/addresses";
  
  }
  
  // Queries a list of Rates items.
  rpc Rates    (QueryGetRatesRequest) returns (QueryGetRatesResponse) {
    option (google.api.http).get = "/stwart/rates/rates/{denom}";
  
  }
  rpc RatesAll (QueryAllRatesRequest) returns (QueryAllRatesResponse) {
    option (google.api.http).get = "/stwart/rates/rates";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetAddressesRequest {
  uint64 id = 1;
}

message QueryGetAddressesResponse {
  Addresses Addresses = 1 [(gogoproto.nullable) = false];
}

message QueryAllAddressesRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllAddressesResponse {
  repeated Addresses                              Addresses  = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetRatesRequest {
  string denom = 1;
}

message QueryGetRatesResponse {
  Rates rates = 1 [(gogoproto.nullable) = false];
}

message QueryAllRatesRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllRatesResponse {
  repeated Rates                                  rates      = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

