syntax = "proto3";

package stwartchain.rates;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "stwartchain/rates/params.proto";
import "stwartchain/rates/addresses.proto";
import "stwartchain/rates/rates.proto";

option go_package = "gitlab.stalwart.tech/ijio/main/backend/stwart-chain/x/rates/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams    (MsgUpdateParams   ) returns (MsgUpdateParamsResponse   );
  rpc CreateAddresses (MsgCreateAddresses) returns (MsgCreateAddressesResponse);
  rpc UpdateAddresses (MsgUpdateAddresses) returns (MsgUpdateAddressesResponse);
  rpc DeleteAddresses (MsgDeleteAddresses) returns (MsgDeleteAddressesResponse);
  rpc CreateRates     (MsgCreateRates    ) returns (MsgCreateRatesResponse    );
  rpc UpdateRates     (MsgUpdateRates    ) returns (MsgUpdateRatesResponse    );
  rpc DeleteRates     (MsgDeleteRates    ) returns (MsgDeleteRatesResponse    );
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                      "authority";
  option           (amino.name) = "stwart/x/rates/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgCreateAddresses {
  option (cosmos.msg.v1.signer) = "creator";
           string creator = 1;
  repeated string address = 2;
}

message MsgCreateAddressesResponse {
  uint64 id = 1;
}

message MsgUpdateAddresses {
  option (cosmos.msg.v1.signer) = "creator";
           string creator = 1;
           uint64 id      = 2;
  repeated string address = 3;
}

message MsgUpdateAddressesResponse {}

message MsgDeleteAddresses {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeleteAddressesResponse {}

message MsgCreateRates {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string denom   = 2;
  string  rate    = 3;
  int32   decimals = 4;
}

message MsgCreateRatesResponse {}

message MsgUpdateRates {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string denom   = 2;
  string  rate    = 3;
  int32   decimals = 4;
}

message MsgUpdateRatesResponse {}

message MsgDeleteRates {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string denom   = 2;
}

message MsgDeleteRatesResponse {}

