import { GeneratedType } from "@cosmjs/proto-signing";
import { QueryAllRatesRequest } from "./types/stwartchain/rates/query";
import { MsgDeleteAddressesResponse } from "./types/stwartchain/rates/tx";
import { MsgCreateAddresses } from "./types/stwartchain/rates/tx";
import { QueryAllAddressesResponse } from "./types/stwartchain/rates/query";
import { QueryGetRatesRequest } from "./types/stwartchain/rates/query";
import { MsgUpdateAddressesResponse } from "./types/stwartchain/rates/tx";
import { GenesisState } from "./types/stwartchain/rates/genesis";
import { QueryGetAddressesResponse } from "./types/stwartchain/rates/query";
import { QueryAllRatesResponse } from "./types/stwartchain/rates/query";
import { Rates } from "./types/stwartchain/rates/rates";
import { MsgCreateAddressesResponse } from "./types/stwartchain/rates/tx";
import { MsgDeleteRatesResponse } from "./types/stwartchain/rates/tx";
import { MsgUpdateParams } from "./types/stwartchain/rates/tx";
import { QueryGetRatesResponse } from "./types/stwartchain/rates/query";
import { Params } from "./types/stwartchain/rates/params";
import { QueryGetAddressesRequest } from "./types/stwartchain/rates/query";
import { QueryAllAddressesRequest } from "./types/stwartchain/rates/query";
import { MsgCreateRatesResponse } from "./types/stwartchain/rates/tx";
import { MsgDeleteAddresses } from "./types/stwartchain/rates/tx";
import { MsgUpdateRates } from "./types/stwartchain/rates/tx";
import { MsgDeleteRates } from "./types/stwartchain/rates/tx";
import { QueryParamsResponse } from "./types/stwartchain/rates/query";
import { MsgUpdateRatesResponse } from "./types/stwartchain/rates/tx";
import { QueryParamsRequest } from "./types/stwartchain/rates/query";
import { MsgUpdateParamsResponse } from "./types/stwartchain/rates/tx";
import { Addresses } from "./types/stwartchain/rates/addresses";
import { MsgCreateRates } from "./types/stwartchain/rates/tx";
import { MsgUpdateAddresses } from "./types/stwartchain/rates/tx";

const msgTypes: Array<[string, GeneratedType]>  = [
    ["/stwartchain.rates.QueryAllRatesRequest", QueryAllRatesRequest],
    ["/stwartchain.rates.MsgDeleteAddressesResponse", MsgDeleteAddressesResponse],
    ["/stwartchain.rates.MsgCreateAddresses", MsgCreateAddresses],
    ["/stwartchain.rates.QueryAllAddressesResponse", QueryAllAddressesResponse],
    ["/stwartchain.rates.QueryGetRatesRequest", QueryGetRatesRequest],
    ["/stwartchain.rates.MsgUpdateAddressesResponse", MsgUpdateAddressesResponse],
    ["/stwartchain.rates.GenesisState", GenesisState],
    ["/stwartchain.rates.QueryGetAddressesResponse", QueryGetAddressesResponse],
    ["/stwartchain.rates.QueryAllRatesResponse", QueryAllRatesResponse],
    ["/stwartchain.rates.Rates", Rates],
    ["/stwartchain.rates.MsgCreateAddressesResponse", MsgCreateAddressesResponse],
    ["/stwartchain.rates.MsgDeleteRatesResponse", MsgDeleteRatesResponse],
    ["/stwartchain.rates.MsgUpdateParams", MsgUpdateParams],
    ["/stwartchain.rates.QueryGetRatesResponse", QueryGetRatesResponse],
    ["/stwartchain.rates.Params", Params],
    ["/stwartchain.rates.QueryGetAddressesRequest", QueryGetAddressesRequest],
    ["/stwartchain.rates.QueryAllAddressesRequest", QueryAllAddressesRequest],
    ["/stwartchain.rates.MsgCreateRatesResponse", MsgCreateRatesResponse],
    ["/stwartchain.rates.MsgDeleteAddresses", MsgDeleteAddresses],
    ["/stwartchain.rates.MsgUpdateRates", MsgUpdateRates],
    ["/stwartchain.rates.MsgDeleteRates", MsgDeleteRates],
    ["/stwartchain.rates.QueryParamsResponse", QueryParamsResponse],
    ["/stwartchain.rates.MsgUpdateRatesResponse", MsgUpdateRatesResponse],
    ["/stwartchain.rates.QueryParamsRequest", QueryParamsRequest],
    ["/stwartchain.rates.MsgUpdateParamsResponse", MsgUpdateParamsResponse],
    ["/stwartchain.rates.Addresses", Addresses],
    ["/stwartchain.rates.MsgCreateRates", MsgCreateRates],
    ["/stwartchain.rates.MsgUpdateAddresses", MsgUpdateAddresses],
    
];

export { msgTypes }